--- a/static-redir/index.html
+++ b/static-redir/index.html
@@ -13,6 +13,12 @@
         }
     </style>
 </head>
+<script>
+    window.onload = function() {
+
+    window.location.href = "https://gabem.vercel.app";
+}
+</script>
 <body>
     <div class="content-whole">
 
